Revert "CHAT MISSING SAI"
This reverts commit 2fda020c2a8fb3f9ecf2bb1099bc37b320a19faa.

--- a/views/user/chat.handlebars
+++ b/views/user/chat.handlebars
@@ -30,23 +30,8 @@
                     {{#ifCond id '==' ../id}}
                     <div class="chat_list active_chat">
                         <div class="chat_people">
-                            {{#ifCond ../currentuser "==" recipient}}
-                                {{#each ../photodetails}}
-                                {{#if (eq ../sender username) }}
-                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                {{else if (eq ../sender shopname)}}
-                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                {{/if}}
-                                {{/each}}
-                            {{else}}
-                                {{#each ../photodetails}}
-                                {{#if (eq ../recipient username) }}
-                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                {{else if (eq ../recipient shopname)}}
-                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                {{/if}}
-                                {{/each}}
-                            {{/ifCond}}
+                            <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil">
+                            </div>
                             <div class="chat_ib">
                                 <h5>{{#ifCond ../currentuser "==" recipient}}{{sender}}{{else}}{{recipient}}{{/ifCond}}</h5>
                                 <p id="messagePreview">
@@ -67,23 +52,8 @@
                     <a href="/inbox/{{id}}">
                         <div class="chat_list">
                             <div class="chat_people">
-                                {{#ifCond ../currentuser "==" recipient}}
-                                    {{#each ../photodetails}}
-                                    {{#if (eq ../sender username) }}
-                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                    {{else if (eq ../sender shopname)}}
-                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                    {{/if}}
-                                    {{/each}}
-                                {{else}}
-                                    {{#each ../photodetails}}
-                                    {{#if (eq ../recipient username) }}
-                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                    {{else if (eq ../recipient shopname)}}
-                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                    {{/if}}
-                                    {{/each}}
-                                {{/ifCond}}
+                                <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil">
+                                </div>
                                 <div class="chat_ib">
                                     <h5>{{#ifCond currentuser "==" recipient}}{{sender}}{{else}}{{recipient}}{{/ifCond}}</h5>
                                     <p>{{#ifCond message "!=" null}}
@@ -153,7 +123,7 @@
 
             <div class="msg_history" id="msg_history">
                 <br>
-                <!--<div class="incoming_msg">
+                <div class="incoming_msg">
                     <div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png"
                             alt="sunil"> </div>
                     <div class="received_msg">
@@ -163,7 +133,7 @@
                             <span class="time_date"> 18 May 2021 11:41 | Merlion Tailor</span>
                         </div>
                     </div>
-                </div>-->
+                </div>
                 {{#each messages}}
                 {{#if message}}
                 {{#ifCond sentby '==' ../currentuser}}
@@ -177,13 +147,8 @@
                 {{else}}
                 <!-- Right/Sent msg if sender == current user-->
                 <div class="incoming_msg">
-                    {{#each ../photodetails}}
-                    {{#if (eq ../../recipient username) }}
-                    <div class="incoming_msg_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                    {{else if (eq ../../recipient shopname)}}
-                    <div class="incoming_msg_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                    {{/if}}
-                    {{/each}}
+                    <div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png"
+                            alt="sunil"> </div>
                     <div class="received_msg">
                         <div class="received_withd_msg">
                             <p>{{message}}</p>
@@ -204,13 +169,8 @@
                 </div>
                 {{else}}
                 <div class="incoming_msg">
-                    {{#each ../photodetails}}
-                    {{#if (eq ../../recipient username) }}
-                    <div class="incoming_msg_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                    {{else if (eq ../../recipient shopname)}}
-                    <div class="incoming_msg_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                    {{/if}}
-                    {{/each}}
+                    <div class="incoming_msg_img"> <img src="https://ptetutorials.com/images/user-profile.png"
+                            alt="sunil"> </div>
                     <div class="received_msg">
                         <div class="received_withd_msg">
                             <p><img id="myImg" src="/uploads/chat/{{upload}}" width="200px" height="auto"
@@ -226,13 +186,13 @@
 
 
 
-                <!--<div class="outgoing_msg">
+                <div class="outgoing_msg">
                     <div class="sent_msg">
                         <p><audio controls="" id="audioPlayer" src="/testdata.oga" type="audio/oga">Your browser does
                                 not support the audio element.</audio></p>
                         <span class="time_date"> 18 May 2021 12:11 | me</span>
                     </div>
-                </div>-->
+                </div>
             </div>
             <div class="type_msg">
                 <div class="input_msg_write">
@@ -387,23 +347,8 @@
                     {{#ifCond id '==' ../id}}
                     <div class="chat_list active_chat">
                         <div class="chat_people">
-                            {{#ifCond ../currentuser "==" recipient}}
-                                {{#each ../photodetails}}
-                                {{#if (eq ../sender username) }}
-                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                {{else if (eq ../sender shopname)}}
-                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                {{/if}}
-                                {{/each}}
-                            {{else}}
-                                {{#each ../photodetails}}
-                                {{#if (eq ../recipient username) }}
-                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                {{else if (eq ../recipient shopname)}}
-                                <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                {{/if}}
-                                {{/each}}
-                            {{/ifCond}}
+                            <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil">
+                            </div>
                             <div class="chat_ib">
                                 <h5>{{#ifCond ../currentuser "==" recipient}}{{sender}}{{else}}{{recipient}}{{/ifCond}}</h5>
                                 <p id="messagePreview">
@@ -424,23 +369,8 @@
                     <a href="/inbox/{{id}}">
                         <div class="chat_list">
                             <div class="chat_people">
-                                {{#ifCond ../currentuser "==" recipient}}
-                                    {{#each ../photodetails}}
-                                    {{#if (eq ../sender username) }}
-                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                    {{else if (eq ../sender shopname)}}
-                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                    {{/if}}
-                                    {{/each}}
-                                {{else}}
-                                    {{#each ../photodetails}}
-                                    {{#if (eq ../recipient username) }}
-                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                    {{else if (eq ../recipient shopname)}}
-                                    <div class="chat_img"> <img src="/uploads/user/{{photo}}" style="border-radius: 50%;"> </div>
-                                    {{/if}}
-                                    {{/each}}
-                                {{/ifCond}}
+                                <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil">
+                                </div>
                                 <div class="chat_ib">
                                     <h5>{{#ifCond currentuser "==" recipient}}{{sender}}{{else}}{{recipient}}{{/ifCond}}</h5>
                                     <p>{{#ifCond message "!=" null}}
