--- a/views/partials/_rnavbar.handlebars
+++ b/views/partials/_rnavbar.handlebars
@@ -100,7 +100,7 @@
                         </div>
                     </div>
                     <div class="same-style header-wishlist">
-                        <a href="/inbox/0"><i class="pe-7s-chat"></i></a>
+                        <a href="/c/inbox/0"><i class="pe-7s-chat"></i></a>
                     </div>
                     <div class="same-style cart-wrap">
                         <button class="icon-cart">
