--- a/views/partials/_tnavbar.handlebars
+++ b/views/partials/_tnavbar.handlebars
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="same-style header-wishlist">
-                        <a href="/inbox/0"><i class="pe-7s-chat"></i></a>
+                        <a href="/c/inbox/0"><i class="pe-7s-chat"></i></a>
                     </div>
                     
                 </div>
