--- a/views/tailor/adddeal.handlebars
+++ b/views/tailor/adddeal.handlebars
@@ -23,6 +23,11 @@
                                     </div>
 
                                     <div class="form-group">
+                                        <label for="name">Original Price ($)</label>
+                                        <input id="originalp" name="originalp" class="form-control" type="text" value="" >
+                                    </div>
+
+                                    <div class="form-group">
                                         <label for="name">Start Date (DD/MM/YYYY)</label>
                                         <input id="dstartdate" name="dstartdate" class="form-control" type="text" value="" >
                                     </div>
