--- a/views/partials/_tnavbar.handlebars
+++ b/views/partials/_tnavbar.handlebars
@@ -20,19 +20,24 @@
                                     <li><a href="">Add Deals</a></li>
                                 </ul>
                             </li>
-                            <li><a href="/viewshops">Sales Chart <i class="fa fa-angle-down"></i></a>
-                            <ul class="submenu">
-                                    <li><a href="">Change Target</a></li>
-                                </ul>
-                            </li>
-
-                            <li><a href="">Vouchers <i class="fa fa-angle-down"></i></i></a>
+                            <li><a href="/tailor/sales">Sales Chart <i class="fa fa-angle-down"></i></a>
                                 <ul class="submenu">
-                                    <li><a href="">Add Vouchers</a></li>
+                                    <li><a href="/tailor/target">Change Target</a></li>
                                 </ul>
                             </li>
 
-                             <li><a href="">Orders</a></li>
+                            <li><a href="/tailor/vouchers">Vouchers <i class="fa fa-angle-down"></i></i></a>
+                                <ul class="submenu">
+                                    <li><a href="/tailor/addvoucher">Add Vouchers</a></li>
+                                </ul>
+                            </li>
+
+                             <li><a href="/tailor/tailordeals">Deals <i class="fa fa-angle-down"></i></i></a>
+                                <ul class="submenu">
+                                    <li><a href="/tailor/adddeal">Add Deals</a></li>
+                                </ul>
+                            </li>
+                             <li><a href="/tailor/orders">Orders</a></li>
                              <li><a href="">Courses <i class="fa fa-angle-down"></i></i></a>
                                 <ul class="submenu">
                                     <li><a href="">Create Courses</a></li>
