--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -21,7 +21,7 @@
 
                             <li><a href="">My Courses</a>
                             </li>
-                            <li><a href="">Flash Deals</a>
+                            <li><a href="/customer/flashdeals">Flash Deals</a>
                             </li>
 
                             <li><a href="/faq">Help </a></li>
