--- a/views/customer/customers_checkout.handlebars
+++ b/views/customer/customers_checkout.handlebars
@@ -112,8 +112,8 @@
                                 </div>
                             </div>
                             <div class="checkout-account-toggle open-toggle2 mb-30">
-                                <a href="user/transaction_complete"><button class="btn-hover checkout-btn"
-                                        type="submit">Confirm</button></a>
+<a href="/transaction_complete"><button class="btn-hover checkout-btn"
+                                        method="post" type="submit">Confirm</button></a>
                                 
                             </div>
                         </div>
