--- a/views/customer/customers_checkout.handlebars
+++ b/views/customer/customers_checkout.handlebars
@@ -1,3 +1,10 @@
+<!--For Bootstrap datepicker-->
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous">
+    </script>
+<link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
+<script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+
 <div class="breadcrumb-area pt-35 pb-35 bg-gray-3">
     <div class="container">
         <div class="breadcrumb-content text-center">
@@ -22,54 +29,54 @@
                                 <div class="billing-info mb-20">
                                     <label for="firstname">FirstName</label>
                                     <input type="text" name="first-name" placeholder="First Name"
-                                        value="{{request.form.firstname }}">
+                                        value="{{user_details.firstname}}">
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
                                 <div class="billing-info mb-20">
                                     <label for="lastname">LastName</label>
                                     <input type="text" name="last-name" placeholder="Last Name"
-                                        value="{{request.form.lastname }}">
+                                        value="{{user_details.lastname}}">
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="billing-info mb-20">
                                     <label for="Address1">Address Line 1</label>
                                     <input type="text" name="Address-Line-1" placeholder="Address "
-                                        value="{{request.form.AddressLine1 }}">
+                                        value="{{user_details.address1 }}">
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="billing-info mb-20">
                                     <label for="Address2">Address Line 2</label>
                                     <input type="text" name="Address-Line-2" placeholder="Address-Line-2"
-                                        value="{{request.form.AddressLine2 }}">
+                                        value="{{user_details.address2 }}">
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="billing-info mb-20">
                                     <label for="city">City</label>
-                                    <input type="text" name="city" placeholder="city" value="{{request.form.city }}">
+                                    <input type="text" name="city" placeholder="city" value="{{user_details.city }}">
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="billing-info mb-20">
                                     <label for="postal_code">Postal Code</label>
                                     <input type="text" name="postal-code" placeholder="Postal Code"
-                                        value="{{request.form.postal_code }}">
+                                        value="{{user_details.postalcode}}">
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="billing-info mb-20">
                                     <label for="Email">Email</label>
-                                    <input type="text" name="email" placeholder="email" value="{{request.form.email }}">
+                                    <input type="text" name="email" placeholder="email" value="{{user_details.email}}">
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="billing-info mb-20">
                                     <label for="phone_number">Phone Number</label>
                                     <input type="text" name="phone_number" placeholder="phone_number"
-                                        value="{{request.form.phone_number }}">
+                                        value="{{user_details.phoneno}}">
                                 </div>
                             </div>
                         </div>
@@ -83,27 +90,6 @@
                         <!--                        <button class="btn-hover checkout-btn" type="submit">register</button>-->
                         <!--                    </div>-->
                         <div class="additional-info-wrap">
-                            <div class="col-lg-12">
-                                <div class="billing-info mb-20">
-                                    <label for="order_notes">Additional Information</label>
-                                    <input type="text" name="order_notes" placeholder="order_notes"
-                                        value="{{request.form.order_notes }}">
-                                </div>
-                            </div>
-                            <div class="col-lg-12">
-                                <div class="billing-info mb-20">
-                                    <label for="delivery_options">Delivery Options</label>
-                                    <input type="text" name="delivery_options" placeholder="delivery_options"
-                                        value="{{request.form.delivery_options }}">
-                                </div>
-                            </div>
-                            <div class="col-lg-12">
-                                <div class="billing-info mb-20">
-                                    <label for="delivery_time">Delivery Time</label>
-                                    <input type="text" name="delivery_time" placeholder="delivery_time"
-                                        value="{{request.form.delivery_time }}">
-                                </div>
-                            </div>
                             <div class="col-lg-12">
                                 <div class="billing-info mb-20">
                                     <label class="font-italic">Delivery Time</label>
@@ -121,10 +107,22 @@
                                     </select>
                                 </div>
                             </div>
+                            <div class="col-lg-12">
+                                <div class="billing-info mb-20">
+                                    <label for="delivery_date">Delivery Date</label>
+                                    <input id="datepicker" width="200" name="delivery_date" placeholder="delivery_date"
+                                        value="{{request.form.delivery_date }}" readonly />
+                                </div>
+                            </div>
                             <div class="checkout-account-toggle open-toggle2 mb-30">
-<a href="/transaction_complete"><button class="btn-hover checkout-btn"
+                                {{!-- <form id="details_form" method="post" action="/transaction_complete">
+                                    <div class="button-box">
+                                        <button type="submit"><span>Confirm</span></button>
+                                    </div>
+                                </form> --}}
+                                <a href="/transaction_complete"><button class="btn-hover checkout-btn"
                                         method="post" type="submit">Confirm</button></a>
-                                
+
                             </div>
                         </div>
                     </form>
@@ -219,13 +217,14 @@
                                     <li>Total</li>
                                 </ul>
                             </div>
-                             <div class="your-order-middle">
+                            <div class="your-order-middle">
                                 {{#each sess.myCart}}
                                 <ul>
                                     {{!-- <span>{{this.itemId}}</span> --}}
                                     <li><span class="order-middle-left">{{this.itemname}}
-                                        {{link text="   Remove" url="/deleteSessItem/" id=this.itemId}}
-                                        {{!-- <a href="/deleteSessItem/{{this.itemId}}"><i class="fa fa-times"></i></a> --}}
+                                            {{link text=" Remove" url="/deleteSessItem/" id=this.itemId}}
+                                            {{!-- <a href="/deleteSessItem/{{this.itemId}}"><i
+                                                    class="fa fa-times"></i></a> --}}
                                         </span>
                                         <span class="order-price">{{this.subtotal}}</span>
                                     </li>
@@ -259,44 +258,53 @@
                                 <div id="paypal-button-container"></div>
                             </div>
                         </div>
+                        <script>
                         <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID"> // Replace YOUR_CLIENT_ID with your sandbox client ID
                         </script>
+
 
                         <div id="paypal-button-container"></div>
 
                         <!-- Add the checkout buttons, set up the order and approve the order -->
-                        <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=SGD" data-sdk-integration-source="button-factory"></script>
-                          <script>
+                        <script src="https://www.paypal.com/sdk/js?client-id=sb&currency=SGD"
+                            data-sdk-integration-source="button-factory"></script>
+                        <script>
+                            $('#datepicker').datepicker({
+                                format: 'dd/mm/yyyy',
+                                value: new Date().toLocaleDateString('EN-SG'),
+                                uiLibrary: 'bootstrap4',
+                            });
+
                             function initPayPalButton() {
-                              paypal.Buttons({
-                                style: {
-                                  shape: 'rect',
-                                  color: 'gold',
-                                  layout: 'vertical',
-                                  label: 'checkout',
+                                paypal.Buttons({
+                                    style: {
+                                        shape: 'rect',
+                                        color: 'gold',
+                                        layout: 'vertical',
+                                        label: 'checkout',
 
-                                },
+                                    },
 
-                                createOrder: function(data, actions) {
-                                  return actions.order.create({
-                                    purchase_units: [{"amount":{"currency_code":"SGD","value":1}}]
-                                  });
-                                },
+                                    createOrder: function (data, actions) {
+                                        return actions.order.create({
+                                            purchase_units: [{ "amount": { "currency_code": "SGD", "value": 1 } }]
+                                        });
+                                    },
 
-                                onApprove: function(data, actions) {
-                                  return actions.order.capture().then(function(details) {
-                                    window.location.replace("/transaction_complete");
-                                  });
-                                },
+                                    onApprove: function (data, actions) {
+                                        return actions.order.capture().then(function (details) {
+                                            window.location.replace("/transaction_complete");
+                                        });
+                                    },
 
-                                onError: function(err) {
-                                  console.log(err);
-                                }
-                              }).render('#paypal-button-container');
+                                    onError: function (err) {
+                                        console.log(err);
+                                    }
+                                }).render('#paypal-button-container');
                             }
                             initPayPalButton();
-                          </script>
-                        
+                        </script>
+
                     </div>
                 </div>
             </div>
