--- a/views/partials/_tnavbar.handlebars
+++ b/views/partials/_tnavbar.handlebars
@@ -33,11 +33,11 @@
                             </li>
 
                              <li><a href="">Orders</a></li>
-                             <li><a href="">Courses <i class="fa fa-angle-down"></i></i></a>
+                             <li><a href="/tailor/viewcourse">Courses <i class="fa fa-angle-down"></i></i></a>
                                 <ul class="submenu">
-                                    <li><a href="">Create Courses</a></li>
-                                    <li><a href="">View My Courses</a></li>
-                                    <li><a href="">Manage my Schedule</a></li>
+                                    <li><a href="/tailor/createcourse">Create Courses</a></li>
+                                    <li><a href="/tailor/viewcourse">View My Courses</a></li>
+                                    <li><a href="/tailor/">Manage my Schedule</a></li>
                                 </ul>
                             </li>
 
