--- a/views/tailor/updatecourse.handlebars
+++ b/views/tailor/updatecourse.handlebars
@@ -22,8 +22,8 @@
                     <form class="contact-form-style" id="updatecourse" action="/tailor/updatecourse/{{course.id}}?_method=PUT" method="post" enctype="multipart/form-data">
                         <div class="row">
                             <div class="col-lg-12">
-                                <label for="title">Course Title:</label>
-                                <input name="title" placeholder="Course Title*" type="text" class="form-control" value="{{course.title}}" required>
+                                <label for="ctitle">Course Title:</label>
+                                <input name="ctitle" placeholder="Course Title*" type="text" class="form-control" value="{{course.ctitle}}" required>
                             </div>
                             <div class="col-lg-12">
                                 <label for="language">Language:</label>
