--- a/views/tailor/viewcourse.handlebars
+++ b/views/tailor/viewcourse.handlebars
@@ -32,9 +32,9 @@
                     </div>
                     <div class="blog-content-2">
 
-                        <h4>{{title}}</h4>
+                        <h4>{{ctitle}}</h4>
                         <div class="blog-meta-2">
-                            By Ah Tong Tailor
+                            By (tailor) Shop
                         </div>
                         <br>
                         <div>
@@ -87,46 +87,7 @@
                                 </div>
                             </form>
                            
-                            <!-- <a href="/deletecourse/{{id}}" data-toggle="modal" data-target="9">Delete</a>
-                            <form action="/viewcourse"  method="post">
-                            -->
-                            <!-- need form??????-->
-                            <!--delete course modal-->
-
-                            <!-- The Modal -->
-                            <!--
-                                <div class="modal" id="">
-                                  <div class="modal-dialog">
-                                    <div class="modal-content">
-
-                                      -->
-                            <!-- Modal Header -->
-                            <!--
-                                      <div class="modal-header">
-                                        <h4 class="modal-title">Delete Confirmation</h4>
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                      </div>
-
-                                      -->
-                            <!-- Modal body -->
-                            <!--
-                                      <div class="modal-body" style="font-size: 20px;">
-                                        Are you sure you want to delete {{title}} ?
-                                      </div>
-
-
-                                      -->
-                            <!-- Modal footer -->
-                            <!--
-                                      <div class="modal-footer">
-                                        <input type="submit" value="Delete" class="btn btn-danger">
-                                       <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                      </div>
-
-                                    </div>
-                                  </div>
-                                </div> 
-                            </form> -->
+                        
                         </div>
 
                     </div>
