--- a/views/tailor/addcontent.handlebars
+++ b/views/tailor/addcontent.handlebars
@@ -54,7 +54,7 @@
 
                             <div class="col-lg-12">
                                 Video
-                                <input name="video" placeholder="Subject*" type="file">
+                                <input name="video" placeholder="Subject*" type="file" required>
                             </div>
 
                             <div class="button-box">
