--- a/views/tailor/createcourse.handlebars
+++ b/views/tailor/createcourse.handlebars
@@ -14,71 +14,22 @@
     <div class="container">
 
         <div class="custom-row-2"> 
-            <!--
-            <div class="col-lg-5 col-md-4">
-                <div class="contact-form">
-                    <div class="contact-title mb-30">
-                        <h2>Create Course</h2>
-                        <p>Adding Course Content only available after creating course</p>
-                    </div>
-                    
-                    <form class="contact-form-style" id="createcourse" action="/createcourse" method="post">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <label for="title" >Course Title:</label>
-                                <input name="title" placeholder="Course Title*" type="text" class="form-control" value="{{name}}" required>
-                            </div>
-                            <div class="col-lg-12">              
-                                <label for="language" >Language:</label>
-                                    <select id="language" name="language">
-                                        <option value="english">English</option> <!--input shit?? lolololol--> <!--
-                                        <option value="mandarin">Mandarin</option>
-                                    </select>
-                            </div>
-                            <br><br><br>
-                            <div class="col-lg-12">              
-                                <label for="day" >Day:</label>
-                                    <select id="day" name="day"> --> <!--
-                                        <option value="monday">Monday</option> --> <!--input shit?? lolololol--> <!--
-                                        <option value="tuesday">Tuesday</option>
-                                        <option value="wednesday">Wednesday</option>
-                                        <option value="thursday">Thursday</option>
-                                        <option value="friday">Friday</option>
-                                        <option value="saturday">Saturday</option>
-                                        <option value="sunday">Sunday</option>
-                                    </select>
-                            </div>
-                            <br><br><br> -->
-                            <!-- 
-                            <div class="col-lg-12">
-                                <label for="thumbnail" >Thumbnail:</label>
-                                <input name="thumbnail" placeholder="Subject*" type="file">
-                            </div> -->
-
-
-                        
-                            <!-- <div class="col-lg-12">
-                                <textarea name="message" placeholder="Your Message*"></textarea>
-                                <button class="submit" type="submit">SEND</button>
-                            </div> --> <!--
-                        </div>
-                    </form>
-                    <p class="form-messege"></p>
-                </div>
-            </div>  -->
+            
             <div class="col-lg-8 col-md-7">
                 <div class="contact-form">
                     <div class="contact-title mb-30">
                         
                     </div>
                     <form class="contact-form-style" id="createcourse" action="/tailor/createcourse" method="post" enctype="multipart/form-data">
+                        <h2>Create Course</h2>
                         <div class="row">
+                            <p style="color: red;">*required</p>
                             <div class="col-lg-12">
-                                <label for="title" >Course Title:</label>
-                                <input name="title" placeholder="Course Title*" type="text" class="form-control" value="{{name}}" required>
+                                <label for="ctitle" >Course Title<span style="color: red;">*</span>:</label>
+                                <input name="ctitle" placeholder="Course Title*" type="text" class="form-control" value="{{name}}" required>
                             </div>
                             <div class="col-lg-12">              
-                                <label for="language" >Language:</label>
+                                <label for="language" >Language<span style="color: red;">*</span>:</label>
                                     <select id="language" name="language">
                                         <option value="english">English</option> <!--input shit?? lolololol-->
                                         <option value="mandarin">Mandarin</option>
@@ -86,7 +37,7 @@
                             </div>
                             <br><br><br>
                             <div class="col-lg-12">              
-                                <label for="day" >Day:</label>
+                                <label for="day" >Day<span style="color: red;">*</span>:</label>
                                     <select id="day" name="day">
                                         <option value="monday">Monday</option> <!--input shit?? lolololol-->
                                         <option value="tuesday">Tuesday</option>
@@ -99,23 +50,23 @@
                             </div>
                             <br><br><br>
 
-                            <label for="materialsneeded" >Materials Needed:</label>
+                            <label for="materialsneeded" >Materials Needed<span style="color: red;">*</span>:</label>
                             <div class="col-lg-12">
-                                <textarea name="material" placeholder="Materials Needed*"></textarea>
+                                <textarea name="material" placeholder="Materials Needed*" required></textarea>
                             </div> 
 
-                            <label for="description" >Description:</label>
+                            <label for="description" >Description<span style="color: red;">*</span>:</label>
                             <div class="col-lg-12">
-                                <textarea name="description" placeholder="Course Description*"></textarea>
+                                <textarea name="description" placeholder="Course Description*" required></textarea>
                             </div>
-                            <label for="price" >Price:</label>
+                            <label for="price" >Price<span style="color: red;">*</span>:</label>
                             <div class="col-lg-12">
-                                <input name="price" placeholder="Price*" type="text">
+                                <input name="price" placeholder="Price*" type="text"required>
                             </div>
 
                             <div class="col-lg-12">
-                                <label for="thumbnail" >Thumbnail:</label>
-                                <input name="thumbnail" placeholder="Subject*" type="file">
+                                <label for="thumbnail" >Thumbnail<span style="color: red;">*</span>:</label>
+                                <input name="thumbnail" placeholder="Subject*" type="file" required>
                             </div>
 
                             <div class="col-lg-12">
